Fix: Fix overlapping of content section by the slide indicators

--- a/Resources/Private/Stylesheets/theme.scss
+++ b/Resources/Private/Stylesheets/theme.scss
@@ -18,6 +18,8 @@ $slick-loader-path: '~slick-carousel/slick/' !default;
 .slick-dots {
     position: absolute;
     top: 5px;
+    bottom: 0;
+    height: 25px;
 
     li,
     li.slick-active {
